add create open square

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,6 @@ form button {
   background-color: rgb(56, 56, 143);
 }
 
-
 input {
   line-height: 1.5;
   width: 100%;
@@ -80,6 +79,9 @@ input {
   outline: none;
   border: none;
   padding: 0 10px;
+}
+.inputNewOpenSquare {
+  width: 80%;
 }
 
 button {
@@ -99,7 +101,6 @@ button:disabled {
   cursor: not-allowed;
 }
 
-
 .sign-in {
   color: #282c34;
   background: white;
@@ -107,10 +108,8 @@ button:disabled {
   margin: 0 auto;
 }
 
-
-
-
-ul, li {
+ul,
+li {
   text-align: left;
   list-style: none;
 }
@@ -131,7 +130,6 @@ p {
   align-items: center;
 }
 
-
 .sent {
   flex-direction: row-reverse;
 }
@@ -145,7 +143,30 @@ p {
   background: #e5e5ea;
   color: black;
 }
+.btn-group button {
+  background-color: #0b93f6; /* Green background */
+  border: 1px solid #181717; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+}
 
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+  background-color: #96c9ee;
+}
 img {
   width: 40px;
   height: 40px;
